--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest --watch"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^12.1.2",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
     "next": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2"
